test/simple/ill-typed/wrap_lazy_mu3.caprice
(* TEST
  typing = ill-typed;
  flags = " -s -w yes";
  typecheck;
*)

(* homemade list *)
let lst a = mu t.
  | `Empty of unit
  | `Cons of a * t

let f (ls : lst (int -> int)) : lst (int -> int) =
  let w : lst ({ i : int | i > 0 } -> int) = ls in
  w (* ERROR: the wrapper conflicts with the return type *)
